# barcode_scanner

core/: CMakeLists.txt
core/include/: auldo_barcode_scanner.h
core/include/util/: get_version.h
core/src/util/: get_version.cpp
core/tests/: playground.cpp  tests.cpp
